--- a/lab7/lab7.tex
+++ b/lab7/lab7.tex
@@ -15,6 +15,7 @@
 \begin{document}
 
 \begin{titlepage}
+  \thispagestyle{empty}
   \centerline {Санкт-Петербургский политехнический университет}
   \centerline { им. Петра Великого}
   \centerline { }
@@ -22,7 +23,7 @@
   \centerline {Кафедра "Прикладная математика"}
   \vfill
   \centerline{\textbf{Отчёт}}
-  \centerline{\textbf{по лабораторной работе №8}}
+  \centerline{\textbf{по лабораторной работе №7}}
   \centerline{\textbf{по дисциплине}}
   \centerline{\textbf{"Математическая статистика"}}
   \vfill
@@ -46,118 +47,273 @@
 \tableofcontents
 
 \newpage
-\listoffigures
-
-\newpage
 \listoftables
 
 \newpage
 \section{Постановка задачи}
 
-Провести дисперсионный анализ с применением критерия Фишера по данным регистраторов для одного сигнала. Определить области однородности сигнала, переходные области, шум / фон.
+Сгенерировать выборку мощностью 100 элементов для нормального распределения $N(x,0,1)$. По данной выборке оценить параметры $\mu$ и $\sigma$ нормального закона методом максимального правдоподобия.
 
-Длину сигнала принять $1024$
+В качестве основной гипотезы $H_0$ будем считать, что сгенерированное распределение имеет вид $N(x, \widehat{\mu}, \widehat{\sigma})$. Проверить основную гипотезу, используя критерий согласия $\chi^2$. В качестве уровня значимости взять $\alpha=0.05$. Привести таблицу вычислений $\chi^2$.
+
+Исследовать точность (чувствительность) критерия $\chi^2$ - сгенерировать выборки равномерного распределения и распределения Лапласа малого объема (20 элементов). Проверить их на нормальность
 
 \newpage
 \section{Теория}
+\subsection{Метод максимального правдоподобия}
 
-Анализ проводится по следующему алгоритму:
-\begin{enumerate}
-	\item Строим гистограмму значений, в которой столбы отвечают за следующие области:
-	\begin{itemize}
-		\item Столбец с наибольшим значением - фон
-		\item Столбцы с малыми значениями - переходы
-		\item Второй по величине столбец после фона - сигнал
-	\end{itemize}
-	\item Устранение явных выбросов с помощью медианного фильтра.
-	\item Разделение сигнала на области: сигнал, фон, переход.
-	\item Разделение областей на типы по критерию Фишера.
-\end{enumerate}
+Пусть $x_1,...,x_n$ - случайная выборка из генеральной совокупности с плотностью вероятности $f(x, \theta)$. $L(x_1,...,x_n,\theta)$ - функция правдоподобия, представляющая собой совместную плотность вероятности независимых случайных величин $x_1,...,x_n$ и рассматриваемая как функция неизвестного параметра $\theta$:
+$$
+L(x_1,...,x_n,\theta)=f(x_1,\theta)f(x_2,\theta)...f(x_3,\theta)
+$$
 
-\subsection{Внутригрупповая дисперсия}
+Оценкой максимального правдоподобия называется такое значение $\widehat{\theta}_{\mbox{пр}}$ из множества допустимых значений параметра $\theta$ для которого функция правдоподобия принимает наибольшее значение при заданных $x_1,...,x_n$:
+$$
+\widehat{\theta}_{\mbox{пр}} = \arg \max_\theta L(x_1,...,x_n,\theta)
+$$
 
-Внутригрупповая дисперсия $s^2_{intaGroup}$ вычисляется по следующей формуле
+Если функция правдоподобия дважды дифференцируема то ее стационарные значения даются корнями уравнения 
+$$
+\frac{\partial L(x_1,...,x_n,\theta)}{\partial \theta} = 0
+$$
+
+Чаще проще искать максимум логарифма функции правдоподобия, т. е. решать следующее уравнение
+$$
+\frac{\partial \ln L}{\partial \theta} = 0
+$$
+которое называют уравнением правдоподобия.
+
+\subsubsection{Оценка методом максимального правдоподобия математического ожидания $\mu$ и дисперсии $\sigma^2$ нормального распределения $N(\mu,\sigma)$}
+
+Составим функцию правдоподобия
+$$
+L(x_1,...,x_n,\mu,\sigma) = \prod^n_{i=1} \frac{1}{\sigma\sqrt{2\pi}} \exp \left \{ - \frac{(x_i - \mu)^2}{2\sigma^2} \right \} = (2\pi\sigma^2)^{\frac{n}{2}} \exp \left \{ - \frac{1}{2\sigma^2} \sum^n_{i=1} (x_i - \mu)^2 \right \} 
+$$
+Тогда
+$$
+\ln L = -\frac{n}{2} \ln 2\pi - \frac{n}{2} \ln \sigma^2 - \frac{1}{2\sigma^2} \sum^n_{i=1} (x_i - \mu)^2
+$$
+Получим следующие уравнения правдоподобия
+$$
+\left \{ \begin{array}{ll}
+\frac{\partial \ln L}{\partial m} = \frac{1}{\sigma^2} \sum^n_{i=1} (x_i - \widehat{\mu}) = \frac{n}{\sigma^2}(\overline{x} - \widehat{\mu}) = 0 \\
+\frac{\partial \ln L}{\partial (\sigma^2)} = - \frac{n}{2\sigma^2} + \frac{1}{2(\sigma^2)^2}\sum^n_{i=1} (x_i - \widehat{\mu})^2 = \frac{n}{2(\sigma^2)^2} \left[ \frac{1}{n} \sum^n_{i=1} (x_i - \widehat{\mu})^2 - \widehat{\sigma}^2 \right] = 0
+\end{array} \right.
+$$
+Откуда следует, что оценка методом максимального правдоподобия математического ожидания есть выборочное среднее, т. е.
 \begin{equation}
-	s^2_{intaGroup} = \frac{1}{k}\sum^k_{i=1}s_i^2 = \frac{1}{k}\sum^k_{i=1} \frac{\sum^n_{j=1} (x_{ij} - X_{\mbox{ср}})^2}{k-1}
+\widehat{\mu}_{\mbox{мп}} = \overline{x}
 \label{eq:1}
 \end{equation}
-где $X_{\mbox{ср}}$ - среднее для части выборки, $k$ - количество частей выборки.
-
-Внутригрупповая дисперсия является дисперсией совокупности и рассматривается как среднее значение выборочных дисперсий.
-
-\subsection{Межгрупповая дисперсия}
-
-Межгрупповая дисперсия $s^2_{interGroup}$ вычисляется по формуле
+а оценкой генеральной дисперсии - выборочная дисперсия
 \begin{equation}
-	s^2_{interGroup} = k \frac{\sum^k_{i=1}(X_{i_{\mbox{ср}}} - X_{\mbox{ср}})^2}{k-1}
+\widehat{\sigma}^2_{\mbox{мп}} = s^2
 \label{eq:2}
 \end{equation}
-где $X_{1_{\mbox{ср}}}, X_{2_{\mbox{ср}}},...,X_{k_{\mbox{ср}}}$ - среднее значение для подвыборок, $X_{\mbox{ср}}$ - среднее значение этих средних значений подвыборок.
+где 
+$$
+s^2 = \frac{1}{n}\sum^n_{i=1} (x_i - \overline{x})^2
+$$
 
-\subsection{Критерий Фишера}
+\subsection{Проверка гипотезы о законе распределения генеральной совокупности. Метод $\chi^2$}
 
-Значение Критерия Фишера определяется формулой
+Исчерпывающей характеристикой изучаемой случайной величины является её закон распределения. Поэтому естественно стремление построить этот закон приближённо на основе статистических данных.Сначала выдвигается гипотеза о виде закона распределения. После того как выбран вид закона, возникает задача оценивания его параметров и проверки (тестирования) закона в целом.Для проверки гипотезы о законе распределения применяются критерии согласия. Таких критериев существует много. Мы рассмотрим наиболее обоснованный и наиболее часто используемый в практике — критерий $\chi^2$, введённый К.Пирсоном (1900 г.) для случая, когда параметры
+распределения известны.
+
+Пусть выдвинута гипотеза $H_0$ о генеральном законе распределения с функцией распределения $F(x)$, которая не содержит неизвестных параметров. 
+
+Разобьем генеральную совокупность на $k$ непересекающихся подмножеств, такие что
 \begin{equation}
-	F = \frac{s^2_{interGroup}}{s^2_{intaGroup}}
-	\label{eq:3}
+\begin{array}{c}
+\bigtriangleup_i = (a_{i-1}, a_i] - \mbox{полуоткрытые промежутки}, i=\overline{2, k-1} \\
+\bigtriangleup_1 = (-\infty, a_1] \\
+\bigtriangleup_k = (a_{k-1}, + \infty)
+\end{array}
+\label{eq:3}
 \end{equation}
+
+В качестве числа $k$ берется число, вычисленное по следующей формуле
+\begin{equation}
+k \approx 1.72 \sqrt[3]{n}
+\label{eq:4}
+\end{equation}
+
+Пусть $p_i = P(X \in \bigtriangleup_i), \; i = \overline{1,k}$, тогда
+\begin{equation}
+p_i = F(a_i) - F(a_{i-1}), \; a_0 = - \infty, a_k = + \infty, i = \overline{1,k}
+\label{eq:5}
+\end{equation}
+заметим, что $\sum^k_{i=1} p_i = 1$ и будем считать, что все $p_i>0, \; i=\overline{1,k}$
+
+Пусть $n_1,...,n_k$ - частоты попадания выборочных элементов в подмножества $\bigtriangleup_1,...,\bigtriangleup_k$ соответственно.
+
+В случае справедливости гипотезы $H_0$ относительные частоты $\frac{n_i}{n}$ при большом $n$ должны быть близки к вероятности $p_i$, поэтому за меру отклонения выборочного распределения от гипотетического с функцией $F(x)$ естественно выбрать величину
+$$
+Z = \sum^k_{i=1}c_i \left( \frac{n_i}{n} - p_i \right)^2
+$$
+$c_i$ - положительные числа, веса. К. Пирсоном в качестве весов были выбраны числа 
+\begin{equation}
+c_i = \frac{n}{p_i}
+\label{eq:6}
+\end{equation}
+
+Тогда получается статистика критерия $\chi^2$  К. Пирсона
+$$
+\chi^2 = \sum^k_{i=1}  \frac{(n_i - np_i)^2}{np_i}
+$$
+
+\subsubsection{Правило проверки гипотезы о законе распределения по методу $\chi^2$}
+
+\begin{enumerate}
+	\item Выбираем уровень значимости $\alpha$
+	\item По таблице Приложение 1 находим квантиль $\chi^2_{1 - \alpha}(k-1)$ распределения хи-квадрат с $k-1$ степенями свободы порядка $1 - \alpha$
+	\item Вычисляем вероятности $p_i$ по формуле (\ref{eq:5})
+	\item Находим частоты $n_i, \; i=\overline{1,k}$
+	\item Находим выборочное значение статистики критерия $\chi^2$:
+	$$
+	\chi^2_B = \sum^k_{i=1} \frac{(n_i - np_i)^2}{np_i}
+	$$
+	\item Сравниваем $\chi^2_B$ и квантиль $\chi^2_{1 - \alpha}(k-1)$:
+	\begin{itemize}
+		\item Если $\chi^2_B < \chi^2_{1 - \alpha}(k-1)$, то гипотеза $H_0$ на данном этапе проверки принимается
+		\item Если $\chi^2_B \ge \chi^2_{1 - \alpha}(k-1)$, то гипотеза $H_0$ отвергается, выбирается одно из альтернативных распределений, и процедура проверки повторяется
+	\end{itemize}
+\end{enumerate}
 
 \newpage
 \section{Реализация}
 
-Лабораторная работа выполнена на языке программирования Python в среде разработки PyCharm. С использованием библиотек numpy и skipy.
+Лабораторная работа выполнена на языке программирования Python в среде разработки PyCharm. Для построения распределений используется библиотека numpy и scipy.
 
-Код программы расположен в репозитории GitHub по ссылке: \url{}
+Код программы расположен в репозитории GitHub по ссылке: \url{https://github.com/Drozdova-Daria/Math_Stat_Lab7}
 
 \newpage
 \section{Результаты}
 
-\begin{figure}[H]
-\center{\includegraphics[scale=0.6]{Figure_1}}
-\caption{Входной сигнал}
-\end{figure}
+\subsection{Метод максимального правдоподобия}
 
-\begin{figure}[H]
-\center{\includegraphics[scale=0.6]{Figure_2}}
-\caption{Гистограмма сигнала}
-\end{figure}
+Оценка математического ожидания методом максимального правдоподобия (\ref{eq:1}):
+$$
+\widehat{\mu} \approx 0.0432
+$$
 
-\begin{figure}[H]
-\center{\includegraphics[scale=0.6]{Figure_3}}
-\caption{Сигнал без выбросов}
-\end{figure}
+Оценка генеральной дисперсии методом максимального правдоподобия (\ref{eq:2}):
+$$
+\widehat{\sigma} \approx 0.6797
+$$
 
-\begin{figure}[H]
-\center{\includegraphics[scale=0.6]{Figure_4}}
-\caption{Разделение областей для данных сигнала с устранением выбросов}
-\end{figure}
+\subsection{Проверка гипотезы о законе распределения генеральной совокупности. Метод $\chi^2$}
 
+\subsubsection{Нормальное распределение $n=100$}
+Количество промежутков $k$ (\ref{eq:4}): $k = 8$
+
+Уровень значимости $\alpha = 0.05$
+
+Тогда квантиль по таблице в Приложении 1: $\chi^2_{1-\alpha}(k-1) = \chi^2_0.95(7) = 14.07$
+
+\begin{table} [H]
 \begin{center}
-\begin{table}[H]
-\begin{tabular}{|c|c|c|c|c|c|}
+\begin{tabular}{|c|c|c|c|c|c|c|}
 \hline 
-Промежуток & Тип & Количесвто разбиений & $s^2_{intarGroup}$ (\ref{eq:1}) & $s^2_{interGroup}$( \ref{eq:2}) & $F$ (\ref{eq:3}) \\ 
+$i$ & $\bigtriangleup_i$ (\ref{eq:3}) & $n_i$ & $p_i$ (\ref{eq:5}) & $np_i$ & $n_i - np_i$ & $\frac{(n_i-np_i)^2}{np_i}$ \\ 
 \hline 
-1 & Фон & 4 & 0.00066 & 0.00005 & 0.07492 \\ 
+1 & $(-\infty, -1.01]$ & 22 & 0.1562 & 15.62 & 6.38 & 2.60 \\ 
 \hline 
-2 & Переход & 4 & 0.00375 & 0.07350 & 19.59514 \\ 
+2 & $(-1.01, -0.58]$ & 13 & 0.1241 & 12.41 & 0.59 & 0.03 \\ 
 \hline 
-3 & Сигнал & 5 & 0.00071 & 0.00008 & 0.11488 \\ 
+3 & $(-0.58, -0.15]$ & 13 & 0.1587 & 15.87 & -2.87 & 0.52 \\ 
 \hline 
-4 & Переход & 6 & 0.00059 & 0.10214 & 172.69808 \\ 
+4 & $(-0.15, 0.28]$ & 11 & 0.1693 & 16.93 & -5.93 & 2.08 \\ 
 \hline 
-5 & Фон & 6 & 0.00012 & 0.00013 & 1.06922 \\ 
+5 & $(0.28, 0.70]$ & 19 & 0.1507 & 15.07 & 3.93 & 1.02 \\ 
 \hline 
-\end{tabular} 
-
-\caption{Характеристики выделенных областей}
-\end{table}
+6 & $(0.70, 1.13]$ & 9 & 0.1120 & 11.20 & -2.20 & 0.43 \\ 
+\hline 
+7 & $(1.13, 1.56]$ & 6 & 0.0695 & 6.95 & -0.95 & 0.13 \\ 
+\hline 
+8 & $(1.56, +\infty)$ & 7 & 0.0594 & 5.94 & 1.06 & 0.19 \\ 
+\hline 
+$\sum$ & - & 100 & 1.0000 & 100.00 & 0.00 & \color{red}{$6.99= \chi^2_B$} \\ 
+\hline 
+\end{tabular}
+\caption{Вычисление $\chi^2_B$ при проверке гипотезы $H_0$ о нормальном законе распределения $N(x,\widehat{\mu}, \widehat{\sigma})$} 
 \end{center}
+\end{table}
+Сравнивая $\chi^2_B = 6.99$ и $\chi^2_0.95(7) = 14.07$, получаем, что $\chi^2_B < \chi^2_0.95(4)$. Следовательно гипотезу $H_0$ на данном этапе можно принять.
+
+\subsubsection{Равномерное распределение $n=20$}
+
+Количество промежутков $k$ (\ref{eq:4}): $k = 5$
+
+Уровень значимости $\alpha = 0.05$
+
+Тогда квантиль по таблице в Приложение 1: $\chi^2_{1-\alpha}(k-1) = \chi^2_0.95(4) = 9.49$
+
+\begin{table} [H]
+\begin{center}
+\begin{tabular}{|c|c|c|c|c|c|c|}
+\hline 
+$i$ & $\bigtriangleup_i$ (\ref{eq:3}) & $n_i$ & $p_i$ (\ref{eq:5}) & $np_i$ & $n_i - np_i$ & $\frac{(n_i-np_i)^2}{np_i}$ \\ 
+\hline 
+1 & $(-\infty, -1.5]$ & 0 & 0.0668 & 1.34 & -1.34 & 1.34 \\ 
+\hline 
+2 & $(-1.5, -0.48]$ & 8 & 0.2488 & 4.98 & 3.02 & 1.84 \\ 
+\hline 
+3 & $(-0.48, 0.54]$ & 7 & 0.3898 & 7.79 & -0.79 & 0.08 \\ 
+\hline 
+4 & $(0.54, 1.56]$ & 5 & 0.2352 & 4.70 & 0.29 & 0.02 \\ 
+\hline 
+5 & $(1.56, +\infty)$ & 0 & 0.0594 & 1.18 & -1.18 & 1.19 \\ 
+\hline 
+$\sum$ & - & 20 & 1.0000 & 20.00 & 0.00 & \color{red}{$4.46= \chi^2_B$} \\ 
+\hline 
+\end{tabular}
+\caption{Вычисление $\chi^2_B$ при проверке гипотезы $H_0$ о равномерном законе распределения $U \left(x,\widehat{\mu}, 2\sqrt{3}\widehat{\sigma}\right)$} 
+\end{center}
+\end{table}
+Сравнивая $\chi^2_B = 4.46$ и $\chi^2_0.95(4) = 9.49$, получаем, что $\chi^2_B < \chi^2_0.95(4)$. Следовательно гипотезу $H_0$ на данном этапе можно принять.
+
+\subsubsection{Распределение Лапласа $n=20$}
+
+Количество промежутков $k$ (\ref{eq:4}): $k = 5$
+
+Уровень значимости $\alpha = 0.05$
+
+Тогда квантиль по таблице в Приложение 1: $\chi^2_{1-\alpha}(k-1) = \chi^2_0.95(4) = 9.49$
+
+\begin{table} [H]
+\begin{center}
+\begin{tabular}{|c|c|c|c|c|c|c|}
+\hline 
+$i$ & $\bigtriangleup_i$ (\ref{eq:3}) & $n_i$ & $p_i$ (\ref{eq:5}) & $np_i$ & $n_i - np_i$ & $\frac{(n_i-np_i)^2}{np_i}$ \\ 
+\hline 
+1 & $(-\infty, -1.5]$ & 1 & 0.0668 & 1.34 & -0.34 & 0.08 \\ 
+\hline 
+2 & $(-1.5, -0.48]$ & 6 & 0.2488 & 4.98 & 1.02 & 0.21 \\ 
+\hline 
+3 & $(-0.48, 0.54]$ & 4 & 0.3898 & 7.79 & -3.79 & 1.85 \\ 
+\hline 
+4 & $(0.54, 1.56]$ & 7 & 0.2352 & 4.70 & 2.29 & 1.12 \\ 
+\hline 
+5 & $(1.56, +\infty)$ & 2 & 0.0594 & 1.18 & 0.81 & 0.56 \\ 
+\hline 
+$\sum$ & - & 20 & 1.0000 & 20.00 & 0.00 & \color{red}{$3.82= \chi^2_B$} \\ 
+\hline 
+\end{tabular}
+\caption{Вычисление $\chi^2_B$ при проверке гипотезы $H_0$ о законе распределения Лапласа $L \left(x,\widehat{\mu}, \frac{\widehat{\sigma}}{\sqrt{2}} \right)$} 
+\end{center}
+\end{table}
+Сравнивая $\chi^2_B = 3.82$ и $\chi^2_0.95(4) = 9.49$, получаем, что $\chi^2_B < \chi^2_0.95(4)$. Следовательно гипотезу $H_0$ на данном этапе можно принять.
 
 \newpage
 \section{Обсуждение}
 
-Для входных данных сигнала были получены следующие области однородности: фон и сигнал, эти области однородны, так как значения критерия Фишера находятся вблизи 1.
+В результате проведенных исследований установили, что гипотезу $H_0$ можно принять для все исследуемых распределений.
 
-На переходах значения критерия Фишера много больше 1, значит эти области неоднородны.
+\newpage
+\section{Приложение 1}
+\begin{figure}[h]
+\center{\includegraphics[scale=0.7]{table}}
+\end{figure}
+
 \end{document}
