--- a/lab7/lab7.tex
+++ b/lab7/lab7.tex
@@ -310,6 +310,8 @@ $\sum$ & - & 20 & 1.0000 & 20.00 & 0.00 & \color{red}{$3.82= \chi^2_B$} \\
 
 В результате проведенных исследований установили, что гипотезу $H_0$ можно принять для все исследуемых распределений.
 
+Т. е. и при малых мощностях выборки критерий $\chi^2$ не почувствовал разницы между нормально распределенной величиной и распределенной по Лапласу или нормально распределенной величиной и равномерно распределенной величиной. Результат ожидаем, т. к. выборка довольно мала, законы схожи по форме и параметры масштаба и сдвига выбраны тоже так, чтобы законы максимально друг к другу приблизились.
+
 \newpage
 \section{Приложение 1}
 \begin{figure}[h]
